--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
 
         <!-- TÍTULO E PESQUISAR -->
-        <div class="container01">
+        <div class="container">
 
             <div class="row text-center">
                 <div class="col">
@@ -41,7 +41,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-md-6">
+                <div class="col-9 col-md-6">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Pesquisar">
                         <span class="input-group-text" id="basic-addon2"><i class="bi bi-search"></i></span>
@@ -51,30 +51,54 @@
 
         </div>
 
+       
 
-        <!-- col-tamanho-número de colunas -->
+        <!-- FUNDO E CARDS -->
+        <div class="container">
+            <div class="row bg-image">
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+ <!-- col-tamanho-número de colunas -->
         <!-- xs (Smartphones) -->
         <!-- sm (Tablets) -->
         <!-- md (Desktops) -->
         <!-- lg (Desktops maiores) -->
+    <footer>
+        <div class="container">
 
-        <!-- FUNDO E CARDS -->
-        <div class="container02">
-            <div class="row">
-                <div class="col">
-                    <img class="img-fundo" src="./img/fundo.jpg" alt="Imagem de fundo">
+            <div class="row text-center">
+                <div class="col-xs-12 col-md-4">
+                    <div>
+                        <p>PERSONAGENS: XX</p>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-4">
+                    <div>
+                        <p>EPISÓDIOS: XX</p>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-4">
+                    <div>
+                        <p>LOCALIZAÇÕES: XX</p>
+                    </div>
                 </div>
             </div>
+
+            <div class="row text-center">
+                <div class="col">
+                    <div>Desenvolvido por: Michele Kopper em 2024</div>
+                </div>
+            </div>
+
         </div>
-
-
-
-
-    </main>
-
-
-
-    <footer></footer>
+    </footer>
 
     <!-- Link JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
