--- a/index.html
+++ b/index.html
@@ -27,51 +27,83 @@
                 </a>
             </div>
         </nav>
+
+        <!-- TÍTULO E PESQUISAR -->
+        <nav>
+            <div class="container">
+
+                <div class="row text-center">
+                    <div class="col">
+                        <h1>API de Rick and Morty</h1>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-9 col-md-6">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Pesquisar">
+                            <span class="input-group-text" id="basic-addon2"><i class="bi bi-search"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
     </header>
 
     <main>
 
-        <!-- TÍTULO E PESQUISAR -->
+        <!-- CARDS -->
         <div class="container">
-
-            <div class="row text-center">
+            <div class="row">
                 <div class="col">
-                    <h1>API de Rick and Morty</h1>
-                </div>
-            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
 
-            <div class="row justify-content-center">
-                <div class="col-9 col-md-6">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Pesquisar">
-                        <span class="input-group-text" id="basic-addon2"><i class="bi bi-search"></i></span>
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
 
-       
 
-        <!-- FUNDO E CARDS -->
-        <div class="container">
-            <div class="row bg-image">
-                <div class="col">
 
-                </div>
-            </div>
-        </div>
+
+
     </main>
 
- <!-- col-tamanho-número de colunas -->
-        <!-- xs (Smartphones) -->
-        <!-- sm (Tablets) -->
-        <!-- md (Desktops) -->
-        <!-- lg (Desktops maiores) -->
+    <!-- col-tamanho-número de colunas -->
+    <!-- xs (Smartphones) -->
+    <!-- sm (Tablets) -->
+    <!-- md (Desktops) -->
+    <!-- lg (Desktops maiores) -->
     <footer>
-        <div class="container">
+        <div class="container pt-5 pb-5">
 
-            <div class="row text-center">
+            <div class="row text-center pb-5">
                 <div class="col-xs-12 col-md-4">
                     <div>
                         <p>PERSONAGENS: XX</p>
@@ -91,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="row text-center">
+            <div class="row text-center pt-5">
                 <div class="col">
                     <div>Desenvolvido por: Michele Kopper em 2024</div>
                 </div>
