--- a/index.html
+++ b/index.html
@@ -51,94 +51,86 @@
         </nav>
     </header>
 
-    <main>
-
-        <!-- CARDS -->
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="content-wrapper">
+        <main>
+            <!-- CARDS -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
 
-
-
-
-
-    </main>
-
-    <!-- col-tamanho-número de colunas -->
-    <!-- xs (Smartphones) -->
-    <!-- sm (Tablets) -->
-    <!-- md (Desktops) -->
-    <!-- lg (Desktops maiores) -->
-    <footer>
-        <div class="container pt-5 pb-5">
-
-            <div class="row text-center pb-5">
-                <div class="col-xs-12 col-md-4">
-                    <div>
-                        <p>PERSONAGENS: XX</p>
+        <!-- col-tamanho-número de colunas -->
+        <!-- xs (Smartphones) -->
+        <!-- sm (Tablets) -->
+        <!-- md (Desktops) -->
+        <!-- lg (Desktops maiores) -->
+        <footer>
+            <div class="container pt-5 pb-5">
+                <div class="row text-center pb-5">
+                    <div class="col-xs-12 col-md-4">
+                        <div>
+                            <p>PERSONAGENS: XX</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <div>
+                            <p>EPISÓDIOS: XX</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <div>
+                            <p>LOCALIZAÇÕES: XX</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-md-4">
-                    <div>
-                        <p>EPISÓDIOS: XX</p>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-md-4">
-                    <div>
-                        <p>LOCALIZAÇÕES: XX</p>
+                <div class="row text-center pt-5">
+                    <div class="col">
+                        <div>Desenvolvido por: Michele Kopper em 2024</div>
                     </div>
                 </div>
             </div>
-
-            <div class="row text-center pt-5">
-                <div class="col">
-                    <div>Desenvolvido por: Michele Kopper em 2024</div>
-                </div>
-            </div>
-
-        </div>
-    </footer>
+        </footer>
+    </div>
 
     <!-- Link JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Meu JS -->
     <script src="./script.js"></script>
-
-
 
 </body>
 
